--- a/_layouts/plantillablog.html
+++ b/_layouts/plantillablog.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-    <title>{{page.title}}</title>
+    <title>{{https://github.com/organizacion-sesion-3-Victor-Escribano/plantilla-jekyll/blob/master/blog.html}}</title>
     <meta name="author" content="">
     <meta name="description" content="">
   </head>
