--- a/_layouts/plantillablog.html
+++ b/_layouts/plantillablog.html
@@ -23,7 +23,11 @@
     </aside>
 
     <section>
-      {{content}}
+      {{---
+layout: layout
+title: Página de blog
+permalink: /blog
+---}}
     </section>
 
     <footer>
