--- a/_layouts/plantillablog.html
+++ b/_layouts/plantillablog.html
@@ -27,7 +27,10 @@
 layout: layout
 title: Página de blog
 permalink: /blog
----}}
+---
+      <p>{{ page.date }}</p>
+
+{{ content }}}}
     </section>
 
     <footer>
